# cokoala-portfolio

./: Cargo.toml  README.md  Trunk.toml  flake.nix  index.html  spin.toml  tailwind.config.js
public/: styles.css
src/: lib.rs  main.rs
src/components/: menu_butts.rs  mod.rs  navbar.rs
src/pages/: about.rs  home.rs  not_found.rs
style/: output.css
